1.0.1

TBD.

1.0.0 - Initial Release.

Games supported:
-Crash Bandicoot
-Crash Bandicoot 2: Cortex Strikes Back
-Crash Bandicoot: Warped
-Crash Nitro Kart
-Crash Twinsanity
-Crash Tag Team Racing
-Crash of the Titans
-Crash Mind Over Mutant

Console ROMs supported:
-PS1
-PS2
-PSP
-XBOX
-GC
-Wii