@@ -6,6 +6,12 @@ Check the included Games.txt for a list of supported games and features.
 
 Website: https://github.com/TheBetaM/CrateModLoader/
 
+Contributors
+
+-BetaM (https://www.youtube.com/channel/UCL-EwV5XqypMUJ5zVHaBjAw) (Creator)
+-CDRomatron (https://github.com/CDRomatron)  
+-ManDude (https://github.com/ManDude) 
+
 License Information
 
 This program is free software: you can redistribute it and/or modify
